refactor: refinement, cleaner code & cleaner project structure (#23)